--- a/BackgroundManager/App.config
+++ b/BackgroundManager/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
@@ -8,11 +8,19 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
-    <userSettings>
-        <BackgroundManager.Properties.Settings>
-            <setting name="Path" serializeAs="String">
-                <value />
-            </setting>
-        </BackgroundManager.Properties.Settings>
-    </userSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.1.0" newVersion="4.0.1.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+  <userSettings>
+    <BackgroundManager.Properties.Settings>
+      <setting name="Path" serializeAs="String">
+        <value />
+      </setting>
+    </BackgroundManager.Properties.Settings>
+  </userSettings>
 </configuration>
