add blackList for running apps

--- a/BackgroundManager/BackgroundManager.csproj
+++ b/BackgroundManager/BackgroundManager.csproj
@@ -47,6 +47,9 @@
     <Reference Include="Innovative.SolarCalculator, Version=2.0.4.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\SolarCalculator.2.0.4\lib\netstandard1.2\Innovative.SolarCalculator.dll</HintPath>
     </Reference>
+    <Reference Include="Mayerch1.GithubUpdateCheck, Version=1.2.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Mayerch1.GithubUpdateCheck.1.2.0\lib\netstandard2.0\Mayerch1.GithubUpdateCheck.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Win32.Primitives, Version=4.0.2.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Win32.Primitives.4.3.0\lib\net46\Microsoft.Win32.Primitives.dll</HintPath>
     </Reference>
